--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,11 +1,9 @@
 ---
-title: 七哥金句：中国人需要团结起来
+title: 2/25/2022 文贵直播：人类从未像2022年如此黑暗，我们将面临着长期的乱世；习近平和普京从2010年就开始制定邪恶计划
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2067181/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2067363/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0225七哥金句-05.jpg)
-整理：雅典娜农场
-发布：枫叶红了
+秘密翻译组-北美组
 
  
 
