--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 中共的欺骗文化
+title: 有钱人的生活方式
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2067383/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2067489/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
