--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 世界各处对G教育的反应
+title: 新中国联邦前所未有的伟大教育计划
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071609/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071658/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
