--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 中国教育是政治需要
+title: 河北衡水中学是房地产、性交易场所、虐童的地方
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071784/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071842/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
