--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 教育捐款不是希望是绝望
+title: 香港富豪对教育的态度
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071666/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071810/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
