--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 如何找到好校长找到好老师是GEDU教育成功第一的关键
+title: 未来的教育
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071896/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071931/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
