--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 教育不是国家的基石,是把人畜分开、认知文明、创造文明和给予文明的一个重要手段
+title: 人真正的核心教育艺术和人文学科
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071867/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071921/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
