--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 教育不是国家的基石,是把人畜分开、认知文明、创造文明和给予文明的一个重要手段
+title: 新中国联邦教育超级规划始于见识（一）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071867/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2071908/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
