--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 20220225文贵大直播： 人民币五万限制导致破窗效应
+title: 20220225文贵大直播：全球战友的联合作战是一场演习 展示了我们新中国联邦的雏形
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2071972/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2071999/)
 
 作者:东京樱花团小视频组
 
