--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: GEDU校长和老师的福利待遇
+title: GEDU教育基金
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2072062/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2072070/)
 
 #### 視頻剪輯: WinterGuo ；開智則立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蝸牛 ；牛魔王
 視頻定位：BENJ1；WEI
