--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,7 +1,7 @@
 ---
-title: 20220226文贵大直播：人类的文明和发明都来自偶然的错误
+title: 20220226文贵大直播：GEDU不会接受商业合作不需要战友捐钱
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2076044/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2076045/)
 
 作者：东京樱花团小视频组
 
