--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 乌克兰战争的智慧
+title: 台湾、大陆专业军人的差别
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2077574/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2077618/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
