--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 乌克兰展示了新型战争
+title: 中国人的教育不是目的,而是工具
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2077563/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2077597/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
