--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 习不打台湾国内的经济崩塌（一）
+title: 打不打台湾习太阳都得死
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2078268/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2078345/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
