--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 中共依靠外来性粮食和进口科技
+title: 人类会有更好的制度推出来
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2078462/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2078670/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
