--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 20220227郭文贵大直播 ：乌克兰战争中的AI技术与示弱公关和唯真不破
+title: 20220227郭文贵大直播 ：文贵先生讲解夫妻相处之道
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2080868/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2080994/)
 
 作者：东京樱花团小视频组
 
