--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 20220227郭文贵大直播 ：美国更希望中共攻打台湾 然后以正义的身份参与进这场战争
+title: 20220227郭文贵大直播 ：共产党一打仗必定断电 断网 抢光老百姓的财物 分裂人心
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2080941/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2081032/)
 
 作者：东京樱花团小视频组
 
