--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,36 +1,52 @@
 ---
-title: 大直播后记： 保命、保财、报仇——战争心理学
+title: 泽连斯基 VS 普京：乌克兰完胜！至少在公关领域
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083200/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2083316/)
 
-#### 整理：清水冷香、Lucy Liu
-编辑：Mohegayer K. Simon
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-36.png)图片来源：墨尔本雅典娜农场设计组
-那个记者叫什么Marton John（音译：人名），那个傻货，他懂个屁呀！他觉得他在客厅是宣布主权一样，根本不知道我们过去干了啥，不知道现在共产党多怕我们，不知道为什么盘古龙头变成龟头了，因为他无知！他是在酒杯里边见世界。所以当时我说的保命，谁不想保命？保财，谁不捂住自己的钱包？谁不捂着自己的脑袋？你告诉我！报仇，你捂着脑袋捂着钱包，你不想想这谁让我抱脑袋报仇的？当然是共产党，那就找共产党，还用说吗？这就是一个战争心理学，你必须具备的素质。启发人的本能和消除人的本能。
+翻译：Sugarpub (酷翻组)
+采集：玫瑰新闻组
 
-七哥从第一天直播开始，你看明镜傻乎乎地问，他当时连直播的基本常识都没有，现在你看到我那时整个的直播，就从我直播之后他们才有了所谓直播设备，你拿个手机采访直播，你是疯子简直是。但是感谢他，我永远感谢明镜，不管他以后怎么说我，就感谢他。但是共产党没想明白的是，七哥当年用的社交媒体这一招，就像过去这几年七哥打仗，都在谈论我们的主体战争的时候，我们从侧面包围过去了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3011.png)
 
-我崇拜中国的霍去病和卫青式的战争——以少胜多，出其不意，转移你的注意力，然后一举歼灭。我喜欢这个。我恨的就是共产党的所谓的三大战争，全是欺骗战争，就拿人去死去，就像越南战争，孩子没玩过枪就送到越南去了。今天你看到乌克兰人，他能不骄傲吗？看看我们中共国，上越南去的时候，60%是孩子，是学生，从来没摸过枪，上了火车才给你枪让你搂两下子。人家乌克兰咋不骄傲呢？
+俄罗斯的炮火横飞在乌克兰境内之时，交战中的双方在互联网上也正在展开一场激烈的公关战。
 
-人家卫青、霍去病冲到你背后，匈奴人还在前面冲呢，突然发现他后面那波人来了，这是谁呀？还没落完又一波，三波，打着打着，突然间主将才出来了，直接把刀放在你脸上了，现在结束，一刀下去，所有士兵的心理崩溃啊。这就叫宣判式心理学。——你们的头儿在在我的刀刃下呢，你们还要战吗？哎呀，不打了，不打了，你本身就筋疲力尽，全部跪下。这时候大将一挥手，长袍又往后一挥，崛起战马到安全地带去了，下边士兵收拾战场。
+44岁的乌克兰总统弗拉基米尔·泽连斯基是一位与69 岁的俄罗斯总统弗拉基米尔·普京完全不同的领导人。他们两人出生于不同的时代、有着迥然不同的背景，对欧洲持有完全不同的政见。从近期的公关战的角度开来，俄罗斯乌克兰之战胜负还远未能揭晓。
 
-中共国呢？把人弄到了越南去，冲啊，把子弹打光，死了再上，就是靠死人。淮海战役，你看过淮海战役的真相吗？你看过整个当时东北的几场战役吗？全是老百姓，全是饿死人。你再看看平津湖，看看北朝鲜，你再比比乌克兰，我们说实在话，把自己的头塞到裤裆里，都觉得羞愧难当啊！
+泽连斯基在开始他的演员生涯之前，曾是一位受过法律教育的律师。2015 年，他出演了一部名为“人民的仆人”（现在是他的政党的名称）的热门电视连续剧，剧中，他饰演的历史老师抨击腐败政客的一段视频在网上疯传后成为总统。在节目还在播出时，泽连斯基宣布了他的总统竞选活动。
 
-资料来源：[2022年2月27日文贵大直播](https://gtv.org/video/id=621b7633019ef64da651ee6c)
+他的总统竞选在早期被看作一个笑话，被当时的政治精英忽视。然而这位深受欢迎的喜剧演员却是异军突起，开展了一场充满了活力的竞选。后来他通过社交媒体向竞选对手发出攻势，发动众人一起与竞选对手公开辩论，从而以73%的高票胜出。特别值得一提的是，他的获胜演说中专门抨击了普京领导的俄罗斯，在5年前从乌克兰夺取克里米亚半岛的行为，并且讽刺普京说他的当选完全是政治作弊的结果。泽连斯基鼓励其他苏联解体后的其他国家发展自己的民主政治，因为民主选择在乌克兰已经成功。
 
-发布：wenly
+前克格勃特工出身的普京则在愤怒地反对西方的“侵略行动”，并呼吁俄罗斯的核力量保持高度戒备时，显得很孤独。在普京看来，苏联解体是上个世纪“最大的地缘政治灾难”，对俄罗斯人民来说是一场“真正的悲剧”。因此普京在西方人的眼中的形象是怒目而视，挥舞着俄罗斯军队四处威胁周遭地区。
 
-更多资讯，请关注：
+普京，作为一位习惯于间谍游戏、媒体清洗和权力游戏的领导人，不屑于泽连斯基发出的和平相处各种尝试。在普京看来，泽连斯基不过是一个向西方倾斜的政治暴发户，是他重振俄罗斯荣耀梦想的绊脚石。
 
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+乌克兰与莫斯科之间的冲突已经持续了好几个月，这段时间里面很多乌克兰人都暗暗担心他们选出来的这个总统是否具备战时总统所需的钢铁神经，能否将乌克兰团结起来对抗强大的多达 19 万，集陆、海、空武库为一体的俄罗斯军队。
 
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+然而，自俄罗斯入侵以来的这几天时间里，泽连斯基大放异彩。民众们都表示这场战争终于激发了他最好的一面，他的完美表现让人民惊讶，纷纷成为他无条件的忠实粉丝。
 
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+泽连斯基每天都出现在各个社交媒体平台上，像许多其他乌克兰人一样，经常因夜间导弹和首都基辅上空的爆炸而紧张不安，穿着军绿色 T 恤，红着眼睛，没有刮胡子。而他每天多次的短视频，也成为最好的辟谣 – 关于他正在逃离的谣言。
 
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+乌克兰人民都表示他们有一位真正的战时领导人，他做的一切都是正确的。泽连斯基无论如何都留在这座最糟糕的噩梦搬的城市中的勇敢行动，鼓舞着乌克兰的民心。总统将众人坚强地凝聚在一起。
 
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+相形之下，普京的行为则容易让人联想到小说中描述得冷漠的恶棍。最近几天，他似乎与世隔绝，一个人独自坐在镀金的房间里，而他的下属则像临时演员一样没有头绪。
+
+作为冷战期间在东德招募间谍的情报人员，普京在 1999 年被当时的总统鲍里斯·叶利钦将相对默默无闻的他挑选出来担任总理。起初，柔道专家出身的普京对被媒体拍到赤裸上身时毫不避讳，那时他似乎有意拉近俄罗斯与西方的距离。在 2001 年 9 月 11 日恐怖袭击之后，他与美国结盟，并表示相信波罗的海国家，如果愿意他们应该加入北大西洋公约组织。但几年后，他改变主意。为了对抗他所认为的北约向俄罗斯势力范围的扩张，普京对格鲁吉亚发动了一场战争，并吞并了克里米亚。他认为苏联 1991 年解体是巨大不公，因此要报仇雪恨。
+
+自中共病毒大流行爆发以来，普京更加专注于纠正他认为的那些历史错误。这一点在他入侵乌克兰前夕的电视讲话中表现得非常明显：他以一种平静但几乎没有抑制的愤怒发表了长达近一个小时的解释，解释了为什么乌克兰根本不是一个国家。
+
+与泽连斯基不同的是，尚不清楚俄罗斯公众是否支持他。俄罗斯限制了国内主流媒体和社交媒体对乌克兰冲突的报道，甚至禁止媒体使用“战争”和“入侵”等词汇，只能描述为“特殊军事行动”。与此同时，俄罗斯媒体加强持续报道所谓的在乌克兰东部省份发生的对俄罗斯族的种族灭绝事件。
+
+但这一切并没有阻止莫斯科和圣彼得堡爆发反战抗议活动。更糟糕的是，入侵乌克兰完全毁掉了普京长期以来的精明战略家形象。许多俄罗斯人对普京对乌克兰的入侵行为感到惊讶与不能理解。特别是随着全球的谴责，这场战争完全切断了俄罗斯与西方世界的联系。俄罗斯人民开始担心这场冲突正在将他们的国家变成一个世界贱民。而更加让人担心的是，普京甚至会发动让这次战争升级成一场核战争。
+
+目前看起来乌克兰的民主情绪被泽连斯基鼓舞起来，世界各政坛领袖也纷纷对泽连斯基表示佩服，甚至称他为政治绅士。全世界各个国家也纷纷表示支持乌克兰，谴责俄罗斯。
+
+[原文链接](https://www.latimes.com/world-nation/story/2022-02-27/zelensky-is-beating-putin-at-least-in-the-public-relations-battle)：
+
+[https://www.latimes.com/world-nation/story/2022-02-27/zelensky-is-beating-putin-at-least-in-the-public-relations-battle](https://www.latimes.com/world-nation/story/2022-02-27/zelensky-is-beating-putin-at-least-in-the-public-relations-battle)
+
+**校对：sherryok (水云间)
+审核校对：Barry Jack
+上传排版：V在途中**
 
  
 
