--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,25 +1,65 @@
 ---
-title: 中共双标救援政策放任中国同胞自灭，还试图阻止新中国联邦实施救援
+title: “我们将摧毁占领者”：泽连斯基向普京发出警告
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/2083197/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2083234/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+**编译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰总统泽伦斯基：我们将摧毁入侵者.png)图片来源:dailymail.co.uk
+克里琴科对基辅居民实行宵禁，直到星期一，乌克兰平民死亡人数达到 219。
 
-2月28日，郭文贵先生于Gettr视频中透露，中共一贯流氓的双标嘴脸在乌克兰救援上体现的淋漓尽致，同时，新中国联邦由法治基金和法治社会主导的紧急救援行动不要钱、只救人。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/a61b0e5723b8e94b.png)图片来源新西兰农场
+抵抗总统沃洛德米尔·泽连斯基(Volodmyr Zelensky)今天承诺要“摧毁占领者”，他说，他的国家军队已经成功击退了向基辅推进的俄罗斯军队。
+
+泽连斯基在给被围困国家人民的视频信息中，指责克里姆林宫试图夺取首都，推翻政府并建立一个“像顿涅茨克一样”的“傀儡”政权，这是战争贩子普京在发动全面入侵战争之前正式承认的两个分离主义地区之一。
+
+他称“我们打破了他们的企图”，并补充说：“我们国家的许多城市和地区都在进行战斗，我们知道，我们正在保护我们的国家、土地和孩子的未来。 基辅和首都周边主要城市还在我军的控制中。
+
+“每个乌克兰人都应该记住一件事：如果你能阻止并摧毁占领者——那就去做吧。 每个能够回到乌克兰的人——回来保卫乌克兰吧。”
+
+与此同时，基辅的宵禁一直持续到周一早上 8 点，以确保最有效的城市防御和人民的安全。之前的每日宵禁时间是晚上 10 点到早上 7 点。
+
+市长维塔利·克里琴科说：“宵禁期间，街上的所有平民都将被视为敌人破坏或侦察组人员。”
+
+此前，基辅的一座高层公寓楼今天早上被一枚毁灭性的导弹击中，导致乌克兰的平民死亡人数达到 198 人。
+
+俄罗斯国防部在推特上发布的情报更新中说，俄罗斯尚未获得对乌克兰领空的控制权，这大大降低了俄罗斯空军的效力。
+
+但武装部队部长詹姆斯·赫佩今天表示，没有理由认为“完美的结局指日可待”，因为他警告说，冲突可能会持续数月。
+
+他告诉BBC：“没有人应该认为这已经结束了。在乌克兰、它的武装部队和非常悲惨的乌克兰人民面前，从过去 48 小时内我们所看到，这将会是几天、几周、几个月的时间。”
+
+正如乌克兰军队说，他们今天已经击退了俄罗斯对其首都的袭击，泽连斯基在一段激情的视频中发誓，要留下来和他的人民继续战斗。
+
+“我就在这里。我们不会放下任何武器。我们将保卫我们的国家，因为我们的武器就是我们的真理，”他在办公室外说道，并谴责说他已经投降或逃跑的说法是虚假信息。
+
+身穿军装的总统补充说：“互联网上出现了很多虚假信息，称我呼吁我军放下武器，撤离正在进行中。”
+
+“事实是，这是我们的土地、我们的国家、我们的孩子，我们将保护这一切。 这就是我想告诉你的。荣耀归于乌克兰”
+
+今天令人震惊的画面显示，一枚导弹将朱利尼机场附近的一座塔楼撕裂，而内部的闭路电视也显示了该地点被击中后的破坏程度。
+
+图片显示，该建筑物的侧面至少有五层楼的洞被炸开，下面的街道上散落着碎石。据报道，有两人在轰炸中丧生。
+
+安东·赫拉申科还表示，俄罗斯谎称没有炮击民用基础设施，声称至少有 40 个此类地点遭到袭击。乌克兰周六晚些时候报道称，该国东部有 19 人在炮击中丧生。
+
+俄罗斯军队袭击造成平民死亡，迄今为止总数达到 219 人，其中包括三名儿童。
+
+乌克兰卫生部长今天表示，约有 1,200 人（包括 33 名儿童）受伤。
+
+与此同时，俄罗斯军队也向乌克兰的军事设施发射了一连串巡航导弹。
+
+来自世界各地的支持不断涌入，包括剑桥公爵和公爵夫人，他们说他们与乌克兰人民“站在一起”，为他们的未来“勇敢地战斗”。
+
+**新闻来源**：[dailymail.co.uk][‘We will destroy the occupiers’: Zelensky’s warning shot to Putin as Mayor Vitali Klitschko imposes a curfew on Kyiv residents until MONDAY and Ukrainian civilian death toll hits 219](https://www.dailymail.co.uk/news/article-10554483/Zelensky-fires-warning-shot-Putin-noose-tightens-Kyiv.html)
+
+* * *
+
+***审核：文乐
+校对：小东
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-9.jpeg)
 
 
-当前，全世界聚焦在激烈交战的俄乌战争，乌克兰正在发生人道灾难。然而，比爹亲娘亲的中共对困于乌克兰的中国公民提供两种处理方式，对于与自己有关联的亲友创造必要的救援条件，对于普通中国公民就以有导弹袭击危险为由无法实施救援。
-
-即便新中国联邦的人道救援宣传工作还未全面铺开，但足已成功激怒中共。导致中共内部招集紧急会议，声称要坚决阻止新中国联邦调动强大的资源救援更多的中国同胞、美国友人等，要求放任在乌克兰的普通中国公民自生自灭。
-
-事实上，目前中共在乌克兰的所有救援行动只是安排了两台大客车，准备把有一定级别的中共官员及家人（小姨子、小舅子等）或相关联人员运送到波兰。与此相对的是，为了救援中国同胞、美国友人等，新中国联邦派去救援的是全世界最安全的大力神飞机，与联合国安保组织机构合作，配备合法而专业的军人护卫。但是，如此美好的救援行动遭到中共严令阻止，中共不出手相救自己的国民，现在还要阻挠中国同胞有别的求生机会。中共向来不允许中国普通人民享有人权，否则就无法继续奴役人民，这就是流氓的中国共产党。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/aba534e848c76767.png)图片来源新西兰农场
-乌克兰并不是中共控制的地域，必将无法阻挡任何正义、合法的救援行动。而且令人兴奋的是，因这次人道救援行动新中国联邦与世界很多国家和机构立即形成了对等的、合作的、互信的关系，并且很多人都在寻求与我们合作。比如，乌克兰的某个社团向新中国联邦求救，希望可以让一些人有偿地搭上救援飞机，新中国联邦回复是不要钱、只救人，尽可能的多救一个是一个，毕竟每个人都是鲜活的生命。
-
-历来有竞争事情才会向着好的方法发展，在乌克兰的人道救援上，新中国联邦的救援行动超过所有中共的部门和机构，成为乌克兰上空飘荡的唯一来自中国人的救援力量。
-
-最后，如果因为新中国联邦的救援行动而促使中共国和美国加速救援乌克兰也将是功德一件。
 
  
 
