--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,33 +1,76 @@
 ---
-title: 乌克兰战争是一场混合型高智商战争
+title: 部分俄罗斯银行正被从SWIFT银行信息系统中剔除
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083146/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2083163/)
 
-**整理：北酒仙翁、hys
-编辑：Candy**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image002-9.jpg)周三拍摄的俄罗斯驻华盛顿大使馆。美国和欧洲的盟友正在将选定的俄罗斯银行从 SWIFT （环球银行金融电信协会）消息系统中剔除。曼德尔·颜（Mandel Ngan）|法新社,盖蒂图片社
+据《NPR》作者马修·施瓦茨(Matthew S. Schwartz )，艾玛·鲍曼(Emma Bowman) 2022年 2 月 27 日报道
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-12.png)
+美国、加拿大和欧洲盟友正在采取行动，将某些俄罗斯银行从 SWIFT 银行消息系统中切断，这是新一轮严厉制裁的一部分，旨在惩罚俄罗斯对乌克兰的持续入侵。
 
+白宫发表声明说，部分原因是“我们承诺确保将选定的俄罗斯银行从 SWIFT 消息系统中剔除。这将确保这些银行与国际金融体系脱节，并打击它们在全球运营的能力。”
 
-郭先生：这种情况下叫什么战争？这是一个混合型的高智商战争，AI工程学、区块链学、导弹武器，就是工程学，全民的一个人心统一、一致对敌，而且非常自信，每个人都想做牺牲，因为他们觉得他跟俄罗斯这个死敌那种仇恨已经到了家了。他来打你，来把我们消灭，本能啊，而且自信自己会赢。
+SWIFT 是全球金融系统中的关键机制，每天支持数百万条安全消息，以促进全球银行间交易。
 
-这几个所有的战争宣传，战争心理学、战争关系学、战争工程学，战争资源调配，然后打不对称的信息战，信息优先，特别是在心理上优先了：我是正义的，你是非正义的。你觉得世界上还有谁觉得乌克兰是坏蛋，俄罗斯是好人吗？人类都觉得俄罗斯是坏蛋，乌克兰是弱的。俄罗斯抓了乌克兰好多士兵没有一个视频出来的，但是乌克兰最早几个小时出一个：俄罗斯的士兵横尸在坦克旁边，士兵在路边光着屁股，还有女孩。那个俄罗斯士兵，多漂亮的女孩儿，死的多可惜呀！真是太残忍了！
+哈佛大学戴维斯俄罗斯和欧亚研究中心执行主任亚历山德拉·瓦克鲁克斯（Alexandra Vacroux）将整个国家从 SWIFT 中剔除描述为“核选项”。瓦克鲁克斯上个月在接受 NPR 采访时表示，它可能会产生广泛的影响。
 
-看了俄罗斯士兵被俘虏，这种在战争心理学叫什么，知道吗？这是不可抗拒，是不可抗拒的，这叫战争宣判心理学。对对方的心理打击叫宣判你死了，没有人不受影响的。 这是为什么现在俄罗斯的部队不允许看手机，完全不知道前方发生了什么。如果都能看到，马上就走了。
+她指出，当伊朗被从该系统中剔除时，“他们损失了一半的石油出口收入和 30% 的对外贸易。”
 
-就像咱们爆料革命对共产党一样： 七哥一出来爆料用了一招，保命、保财、报仇。很多人看不出这里的情况，中国人多少人想报仇，想报仇的人有多少？我第一天说干倒共产党！说，完了完了完了，你疯了吧？就像那个报道我的疯狂、滑稽，因为美国人才刚刚认识到我们爆料革命，他给你定义为你干共产党就像我家客厅被宣布我的主权一样，他根本不知道我们过去干啥，不知道现在共产党多怕我们，他不知道为什么盘古龙头变成龟头了，因为他无知，他是在酒杯里边见世界。
+白宫表示，欧盟和美国将最终确定从 SWIFT 中被切断的特定银行名单。
 
-所以当时我说的时候保命，谁不想保命？你告诉我当时所谓的反腐败就抓了100多万人，保财，谁不捂住自己的钱包？谁不捂自己的脑袋，你告诉我。报仇，你捂着脑袋、捂着钱包时，你不想想谁让我抱脑袋报仇的？当然是共产党啊，那就找共产党，还用说吗？这就是一个战争心理学你必须具备的素质，启发人的本能和消除人的本能。
+据一位不愿透露姓名的政府官员向记者介绍，最新制裁是盟国 “确保这场战争对普京来说是战略上的失败” 计划的一部分。
 
-资料来源：2022.2.27GTV、GETTR文贵大直播
+美国及其盟国表示，他们还将针对俄罗斯央行的资产实施限制，目标是该国可用于支撑卢布的 6,300 亿美元外汇储备。
 
-***发布：Candy***
+该组织中的国家表示，他们计划限制出售公民身份或 “黄金护照”，这允许富有的俄罗斯人通过投资成为其他国家的公民。一些欧洲国家是允许这种做法的。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+该组织还计划成立一个特别工作组，以查明和冻结受制裁的俄罗斯寡头及其亲属和同伙的资产，并努力防止他们将资产隐藏在海外。
+
+白宫官员周六表示，到目前为止，美国及其盟国已经瞄准了俄罗斯最大的 10 家金融机构。周四，拜登政府表示将阻止俄罗斯最大的银行 Sberbank 进入美国金融体系。政府还宣布对第二大银行 VTB 和其他三个金融机构实施新的金融制裁。
+
+美国还表示将加大力度打击虚假信息。
+
+**德国与美国一道提供军事援助**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image004-9.jpg)周六，在乌克兰基辅的一条街道上，两辆汽车在燃烧时，乌克兰士兵在一军事设施外各就各位。<br>埃米利奥•莫雷纳蒂（Emilio Morenatti）|美联社（AP）
+与此同时，美国和德国正向乌克兰军队提供价值数亿美元的军事援助，试图击退俄罗斯的大规模入侵。
+
+五角大楼发言人约翰·柯比（John Kirby）周六对记者说，拜登总统周五批准了 3.5 亿美元的军事援助，其中包括标枪（Javelin）反坦克导弹、小型武器和防弹衣，以支持乌克兰的前线军队防御俄罗斯的袭击。柯比说，这使美国过去一年的援助总额达到 10 亿美元。
+
+德国还向乌克兰运送反坦克武器和导弹。“俄罗斯的袭击标志着一个转折点” 。总理奥拉夫·舒尔茨（Olaf Scholz）在一条推文中说。“我们有责任尽最大努力帮助乌克兰抵御普京的入侵军队。这就是我们向乌克兰的朋友提供1000 件反坦克武器和500 枚毒刺导弹的原因。”
+
+此举标志着柏林不将德国制造的武器，送入冲突地区的政策发生了突然转变。最近几周，这一立场引发了国际社会对德国的广泛批评，尤其是在众多西方盟国向乌克兰运送枪支、弹药和防空系统的情况下。 德国的政策逆转可能意味着欧洲对乌克兰的军事援助迅速增加。
+
+**乌克兰总统敦促公民****“****站稳脚跟****”**
+
+据报道，基辅发生了激烈的巷战，乌克兰军队保卫首都免受俄罗斯的持续入侵。当这座城市被导弹和火箭击中时，空袭警报整夜响起。乌克兰总统泽连斯基敦促乌克兰公民待在室内，躲避并“站稳脚跟”。
+
+泽连斯基自周五以来发布了两段视频，警告说他和他的家人是头号目标，并表明关于他呼吁他的军队投降的虚假信息正在传播。
+
+据英国广播公司翻译，泽连斯基在视频信息中说：“我们经受住并成功击退了敌人的攻击。战斗在我们州的许多城市和地区继续进行。我们正在保卫我们的国家，我们未来孩子的土地。”
+
+他说：“基辅和首都周边的主要城市都由我军控制，占领者想封锁我们国家的中心，把他们的傀儡安插在这里，就像在顿涅茨克一样。我们打破了他们的计划。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image006-4.jpg)周六，基辅西侧，乌克兰士兵站在损坏的乌克兰军车附近。 丹尼尔•里尔（Daniel Leal）| 法新社通过盖蒂图片社
+美国一名高级国防官员证实，俄罗斯人正面临乌克兰军队的顽强抵抗，尚未占领任何主要城市。截至当地时间周六下午，在入侵前部署在乌克兰附近的大约 190,000 名俄罗斯军队中，约有一半在乌克兰境内。
+
+这位美国官员说，俄罗斯军队在基辅外约 19 英里处，但俄罗斯的侦察却在城市内，可能是特种部队的一部分。数千人乘船登陆南部城市马里乌波尔（Mariupol），然后向北前往顿巴斯（Donbas）。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image008-3.jpg)基辅的一栋高层公寓楼在夜间被火箭击中受损。埃弗雷姆•卢卡茨基（Efrem Lukatsky）|美联社
+乌克兰卫生部长周六报告说，到目前为止，已有 198 人丧生，1000 多人受伤。一枚导弹在夜间击中了基辅西南部的一座高层公寓，造成数人受伤。“阻止俄罗斯战犯！”外交部长德米特罗·库莱巴（Dmytro Kuleba）在推文中说。
+
+自周四入侵开始以来，乌克兰的日常生活已经被颠覆。学校停课；许多家庭都躲在家里，但也有许多人试图逃离这个国家，堵住了高速公路。卫星图像显示，在西雷特（Siret） 过境点附近，试图进入罗马尼亚的人员、汽车和卡车出现了 4 英里长的交通堵塞。
+
+**近12万人逃离乌克兰**
+
+联合国表示，最近几天有近 12 万人逃往邻国。离开的大多数是妇女和儿童；不允许 18 至 60 岁的男性离境，因为他们可能会被征召入伍。
+
+白宫周五宣布，它将与欧洲盟友一道，制裁俄罗斯总统弗拉基米尔·普京（Vladimir Putin）和俄罗斯外交部长谢尔盖·拉夫罗夫（Sergey Lavrov）。制裁将包括旅行禁令。
+
+据路透社报道，土耳其总统塔伊普·埃尔多安（Tayyip Erdogan）周六在电话中告诉泽连斯基，他的政府正试图促成立即停火。同样在周六，联合国秘书长安东尼奥·古特雷斯（António Guterres）告诉泽连斯基，联合国将很快开始要求各国提供资金，以支持乌克兰的人道主义行动。
+
+俄罗斯周五否决了联合国安理会呼吁莫斯科停止入侵的决议。
+
+原文链接：[https://www.npr.org/2022/02/26/1083270999/ukraine-russia-swift-sanctions](https://www.npr.org/2022/02/26/1083270999/ukraine-russia-swift-sanctions)
+
+翻译：Nick｜校对：JS709| 编辑&发布：断播
 
  
 
