--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,43 +1,33 @@
 ---
-title: 有声&#124;白宫发布美欧关于SWIFT制裁俄罗斯的声明
+title: 乌克兰战争是一场混合型高智商战争
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2083020/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083146/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
-2月26日，美国白宫网站，发表美国及其盟国针对俄罗斯进行制裁的最新声明，声明大致内容如下。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E6%88%AA%E5%B1%8F2022-02-27-%E4%B8%8B%E5%8D%8810.27.06.png)
-欧盟委员会、法国、德国、意大利、英国、加拿大和美国的领导人与乌克兰政府和乌克兰人民站在一起，谴责普京选择战争。俄罗斯需要为这场战争付出代价。
+**整理：北酒仙翁、hys
+编辑：Candy**
 
-随着俄罗斯军队对基辅和其他乌克兰城市发动攻击，欧盟委员会、法国、德国、意大利、英国、加拿大和美国的领导人与乌克兰政府和乌克兰人民站在一起，决定:
-
-1. 把选定的俄罗斯银行踢出SWIFT系统；
-2. 采取限制性措施，防止俄罗斯中央银行利用其国际储备破坏制裁的影响；
-3. 对助长乌克兰战争和俄罗斯政府有害活动的个人和实体采取行动，限制向其出售公民身份，阻止其进入我们国家的金融系统；
-4. 在下周启动一个跨大西洋特别工作组，查明和冻结在我们管辖范围内的受制裁个人和公司的资产。制裁更多的俄罗斯官员和与俄罗斯政府关系密切的精英及其家人以及他们的推动者，识别和冻结他们在我们管辖范围内持有的资产，以及和其他政府合作，阻止被制裁者在世界各地隐藏资产；
-5. 加强或协调打击虚假信息和其他形式的混合战争。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-12.png)
 
 
+郭先生：这种情况下叫什么战争？这是一个混合型的高智商战争，AI工程学、区块链学、导弹武器，就是工程学，全民的一个人心统一、一致对敌，而且非常自信，每个人都想做牺牲，因为他们觉得他跟俄罗斯这个死敌那种仇恨已经到了家了。他来打你，来把我们消灭，本能啊，而且自信自己会赢。
 
+这几个所有的战争宣传，战争心理学、战争关系学、战争工程学，战争资源调配，然后打不对称的信息战，信息优先，特别是在心理上优先了：我是正义的，你是非正义的。你觉得世界上还有谁觉得乌克兰是坏蛋，俄罗斯是好人吗？人类都觉得俄罗斯是坏蛋，乌克兰是弱的。俄罗斯抓了乌克兰好多士兵没有一个视频出来的，但是乌克兰最早几个小时出一个：俄罗斯的士兵横尸在坦克旁边，士兵在路边光着屁股，还有女孩。那个俄罗斯士兵，多漂亮的女孩儿，死的多可惜呀！真是太残忍了！
 
-文字版原文：[白宫发布美欧关于SWIFT制裁俄罗斯的声明](https://gnews.org/zh-hans/2078401/)
+看了俄罗斯士兵被俘虏，这种在战争心理学叫什么，知道吗？这是不可抗拒，是不可抗拒的，这叫战争宣判心理学。对对方的心理打击叫宣判你死了，没有人不受影响的。 这是为什么现在俄罗斯的部队不允许看手机，完全不知道前方发生了什么。如果都能看到，马上就走了。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+就像咱们爆料革命对共产党一样： 七哥一出来爆料用了一招，保命、保财、报仇。很多人看不出这里的情况，中国人多少人想报仇，想报仇的人有多少？我第一天说干倒共产党！说，完了完了完了，你疯了吧？就像那个报道我的疯狂、滑稽，因为美国人才刚刚认识到我们爆料革命，他给你定义为你干共产党就像我家客厅被宣布我的主权一样，他根本不知道我们过去干啥，不知道现在共产党多怕我们，他不知道为什么盘古龙头变成龟头了，因为他无知，他是在酒杯里边见世界。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+所以当时我说的时候保命，谁不想保命？你告诉我当时所谓的反腐败就抓了100多万人，保财，谁不捂住自己的钱包？谁不捂自己的脑袋，你告诉我。报仇，你捂着脑袋、捂着钱包时，你不想想谁让我抱脑袋报仇的？当然是共产党啊，那就找共产党，还用说吗？这就是一个战争心理学你必须具备的素质，启发人的本能和消除人的本能。
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+资料来源：2022.2.27GTV、GETTR文贵大直播
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+***发布：Candy***
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
