--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,17 +1,50 @@
 ---
-title: 北约，“乌克兰未来几天形势将更加恶化，死亡人数会更多”
+title: 牙医助理寻求食物银行的帮助
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2107427/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107468/)
 
-#### 翻译                   意大利达芬奇农场                         小白鸽
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Schermata-2022-03-04-alle-16.24.18.png)图片来源：tgcom24.mediaset.it
-俄罗斯入侵乌克兰“是几十年以来在欧洲发生的最糟糕的军事入侵，学校、医院和居民区都遭受了轰炸及对核电站的袭击”。
+作者：Heidi Riedner
+翻译：KK
+![](https://assets.gnews.org/wp-content/uploads/2022/03/5_134059443.jpg)
+疫情期间工作难觅但是物价飞涨，很多从来都没有听说过食物银行的人开始寻求食物帮助，其中不乏专业人士，家住万锦的兼职牙医助理就是一个例子。
 
-这是北约秘书长延斯•斯托尔滕贝格在与北约外长特别峰会之后说的一番话，他还补充说：“在未来的几天情况很可能更加恶化， 死亡人数更多，更具摧毁性。  ”
+Nasim Ganatpour有一个八岁的孩子，她说就像大多数人一样， 她一起甚至都不知道万锦有一个Markham Food Bank，更不用说使用它了。但是疫情期间她的工作时间减少和生活成本飙升，这让一切都发生了变化，她上个月第一次造访了食物银行。
 
-原文链接： [https://www.tgcom24.mediaset.it/mondo/ucraina-nato-i-prossimi-giorni-andranno-ancora-peggio-con-piu-morti\_46880458-202202k.shtml](https://www.tgcom24.mediaset.it/mondo/ucraina-nato-i-prossimi-giorni-andranno-ancora-peggio-con-piu-morti_46880458-202202k.shtml)
+吃的东西现在太贵了，我们只是在寻找基本食物需求。她说我一直在全职工作，但现在我的工作时间大幅减少了，只能够来到这里求助食物维持生活。
 
-编辑、上传：Xiao  baige
+已经在万锦市生活了15年的Felicite Dibi说，食物银行对她来说现在比以往任何时候都更加重要。
+
+Dibi说，在她丈夫去世后，她很难为自己和三个孩子提供食物。养房太贵了，每月付清房贷、水电费、煤气费后就什么都没有了。
+
+在排队等待轮到她领取急需的食品杂货时，Dibi赞扬了食物银行工作的志愿者和慷慨的捐赠者。她说：如果我不来这里，我们一家就吃不上饭。
+
+万锦食物银行总裁Stephen Lough表示，大多数人很难想象，吃不上饭是多么可悲的现实。
+
+他说：与去年相比，食物银行的使用量增加了30%，部分需求增长可归因于COVID-19大流行期间的失业以及随后政府取消支持。尽管万锦市被认为富裕，但万锦家庭实际上是整个约克区收入最低的群体之一。这个事实令人震惊，对大多数人来说会感到惊讶。
+
+他补充说，高昂的住房成本和食品价格的上涨加剧了影响，尤其是那些靠有限收入的老年人。
+
+每周有近50名志愿者在每天的三个收集日期间积极地工作，以提供袋装食物、罐头食品，以及新鲜水果、蔬菜、乳制品、肉类、面包和清真食品等，每个家庭可领的重量约为150磅。
+
+食物银行已经将其为客户提供的食物从三到四天的供应量提高到了15天。但由于客户每 28天只允许领次，因此仍有不足之处。
+
+Stephen Lough表示，我们不是日常食物银行，我们是紧急食物银行，我们还没有能力完全解决这种平衡，因此金钱和食品捐赠对食物银行运营非常重要。尽管很多人支持食物银行，但仍然赶不上不断增长的需求。
+
+来源：https://www.yorkregion.com/news-story/10577874-hunger-lives-here-if-i-don-t-come-here-for-sure-we-are-not-going-to-eat-/
+
+**免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+
+**关注我们**
+
+Discord 账号
+
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
+
+Gettr 账号
+
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
