--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,28 +1,28 @@
 ---
-title: 加拿大扣留载有俄公民的飞机
+title: GTA 司机的油价再创历史新高，预计未来几周不会有任何缓解
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107278/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107386/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/6_220A51O0_0.jpg)
-加拿大交通部证实，当局在育空地区的首府黄刀城（Yellowknife），扣留了一家载有俄罗斯公民的飞机。
+作者：Michael Talbot
+翻译：KK
+![](https://assets.gnews.org/wp-content/uploads/2022/03/5_09291K43.jpg)
+大多伦多地区的司机周五会在加油站发现另一个令人瞠目结舌的数字——每升汽油1.749 元，更可怕的是已经屡创新高的油价没有停止的势头，而且未来几周都不会缓解。
 
-据本地英文媒体Globe News报道：加拿大交通部长艾诚致（Omar Alghabra）是在本周四（3月3日）给Globe News的一封电子邮件中透露此事的。与此同时，他也在自己的推特上公布了这个消息，并表示加拿大“将继续追究俄罗斯入侵乌克兰的责任”。
+乌克兰的战争继续将汽油价格推至历史高位，那些盼着油价降低的司机可能要失望了。
 
-当局并没有透露，这家飞机是为什么被扣留，以及会被扣留多少时间。艾诚致部长在给媒体的信件中仅透露：这架载有俄罗斯公民的包机是于本周二“被限制在机场”的，交通部正在与边境服务局合作“评估此事”，试图查明该机是否违反了加拿大针对俄罗斯飞机出台的关闭领空的禁令。
+周五午夜时分，加油站油价又上涨了8分，至每升1.749元，三天内上涨了16分，这已经是一个纪录了。专家表示，未来几天价格会达到1.90元，而且不会有任何缓解。
 
-此前，由于俄乌战争的爆发，加拿大宣布针对俄罗斯飞机关闭领空的决定，同时还宣布了一系列针对俄罗斯的制裁措施，例如向俄罗斯船只关闭港口，向乌克兰提供军事援助，并要求国际刑事法院调查俄罗斯军队涉嫌的战争罪行等等。
+俄罗斯入侵乌克兰引发的供应问题、转向夏季油价以及即将于4月1日上调的联邦碳税诸多因素都导致汽油价格上涨。
 
-有消息称，被扣留的飞机上有两名俄罗斯公民，乘客们正准备前往努纳武特的雷索卢特村旅行。
+汽油价格的迅速上涨促使安省新民主党周三提交了一项旨在规范安省汽油价格的法案。
 
-媒体试图向交通部询问两人的详细信息，被对方援引《隐私法》而拒绝。
+新民主党在一份新闻稿中表示，《石油产品定价公平法》将要求安大略能源委员会规范安省石油产品的零售价格和批发加价。
 
-交通部发言人只是表示：“我们可以告诉你，所有抵达加拿大的旅客都受到严格的筛查措施，必须证明他们符合入境要求……加拿大政府非常重视航空安全及其边境和国家安全责任。保护加拿大人的安全是我们的首要任务。”
+新民主党领袖Andrea Horwath说，在住房、托儿、食品杂货和其他一切成本快速上涨之际，创纪录的高油价正在大幅削减安省家庭的预算。
 
-另一方面，据俄新社3月4日报道，俄罗斯驻加拿大大使斯捷潘诺夫（Oleg Stepanov）称，俄罗斯外交官正在就飞机被扣一事向加拿大外交部寻求解释，但还没有得到加拿大外交部的信息。
+将汽油价格每升降低10分是福特2018选举时一个关键的承诺，看样子福特现在无法兑现了。
 
-斯捷潘诺夫称，“我们正在继续寻求加拿大外交部的回应。我们昨天晚上发出了请求。截至今天早上，他们仍没有关于此事件的信息。他们自称和我们一样，是从媒体报道中了解到相关事件的。”
-
-来源：[https://globalnews.ca/news/8657916/russian-nationals-yellowknife-aircraft/](https://globalnews.ca/news/8657916/russian-nationals-yellowknife-aircraft/)
+来源：https://toronto.citynews.ca/2022/03/04/toronto-gas-prices-record/
 
 **免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
 ![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
