--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,68 +1,36 @@
 ---
-title: 多伦多警察枪杀安大略枪匠，经SIU调查后被免除责任
+title: 牙医助理寻求食物银行的帮助
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107462/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107468/)
 
-作者：Bryann Aguilar
+作者：Heidi Riedner
 翻译：KK
-![](https://assets.gnews.org/wp-content/uploads/2022/03/22_1930531S.png)
-去年11月时，安省西南地区一名男子因为在警方执行搜查令被一名多伦多警官开枪击中并身亡。该男子的妻子麦雪琴（音译，Xueqin Mai）告警方错误杀人，并要求赔偿2300万元。SIU调查组近日公布调查结果称，不会对开枪警员提起指控。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/5_134059443.jpg)
+疫情期间工作难觅但是物价飞涨，很多从来都没有听说过食物银行的人开始寻求食物帮助，其中不乏专业人士，家住万锦的兼职牙医助理就是一个例子。
 
-SIU特别调查组负责人Joseph Martino在周四时公布了对11月3日发生的这起案件的调查结果。当时70岁男子Rodger Kotanko被警方开枪击中身亡。今年一月时，Kotanko的家人状告多伦多警方错误杀人，并寻求2300万元的赔偿。
+Nasim Ganatpour有一个八岁的孩子，她说就像大多数人一样， 她一起甚至都不知道万锦有一个Markham Food Bank，更不用说使用它了。但是疫情期间她的工作时间减少和生活成本飙升，这让一切都发生了变化，她上个月第一次造访了食物银行。
 
-“经过我们对证据的评估，我们认为没有合理理由要对这名警官提起刑事指控，”Martino在报告中表示。
+吃的东西现在太贵了，我们只是在寻找基本食物需求。她说我一直在全职工作，但现在我的工作时间大幅减少了，只能够来到这里求助食物维持生活。
 
-SIU表示，事发当天中午12点左右，警方来到Kotank的住处。枪击发生在中午12点15分左右。经过调查，当时这15分钟内发生的情况是：多伦多枪支管制执法组成员为调查一起枪支走私案件而来到位于Port Ryerse Road上一栋民宅展开搜查。
+已经在万锦市生活了15年的Felicite Dibi说，食物银行对她来说现在比以往任何时候都更加重要。
 
-SIU称，当时警方正在调查两起枪支案，其中一起与绑架案有关。有证据显示，这些枪支登记在Kotanko的枪支生产企业名下。
+Dibi说，在她丈夫去世后，她很难为自己和三个孩子提供食物。养房太贵了，每月付清房贷、水电费、煤气费后就什么都没有了。
 
-“在这些案件中，Kotanko是一名枪匠，他所在的制造企业明显发生过枪支被盗或丢失事件，因此警方怀疑他或者其他同事涉嫌非法的强制交易。”
+在排队等待轮到她领取急需的食品杂货时，Dibi赞扬了食物银行工作的志愿者和慷慨的捐赠者。她说：如果我不来这里，我们一家就吃不上饭。
 
-当天警方考虑到Kotanko的年龄以及以往没有暴力犯罪的记录，而决定不采取强攻方式进入Kotanko的住所。据SIU表示，不强攻的方式指的是到住所后先敲门，宣布警方到场，并要求在与当事人Kotanko对话后再进入屋内。
+万锦食物银行总裁Stephen Lough表示，大多数人很难想象，吃不上饭是多么可悲的现实。
 
-警方那时候以没有警察标志的车辆来到现场，并进入房子里。SIU表示，他们当时先遇到了Kotanko的妻子，她那时正在收拾采购回来的日用品。警方在询问她丈夫的去向后，她告诉警方，Kotanko正在自己的工作室内，就在房子的北面位置。
+他说：与去年相比，食物银行的使用量增加了30%，部分需求增长可归因于COVID-19大流行期间的失业以及随后政府取消支持。尽管万锦市被认为富裕，但万锦家庭实际上是整个约克区收入最低的群体之一。这个事实令人震惊，对大多数人来说会感到惊讶。
 
-SIU还表示，Kotanko那时候在工作室内与客人会面，客人最近买的一只手枪需要维修。这名客人把枪装在袋子里拿来给Kontako，并看着Kontako工作。
+他补充说，高昂的住房成本和食品价格的上涨加剧了影响，尤其是那些靠有限收入的老年人。
 
-原本这名客人打算把枪送来维修，稍后再回来取走，但因为Kotanko说只需要15分钟，于是他便留下来。
+每周有近50名志愿者在每天的三个收集日期间积极地工作，以提供袋装食物、罐头食品，以及新鲜水果、蔬菜、乳制品、肉类、面包和清真食品等，每个家庭可领的重量约为150磅。
 
-“Kotanko正在把这支枪再次组装起来，弹夹还没被装起来，但看起来像是一支完整的枪。这时候他听到有声音从背后传来，” SIU表示。
+食物银行已经将其为客户提供的食物从三到四天的供应量提高到了15天。但由于客户每 28天只允许领次，因此仍有不足之处。
 
-这个声音就是向他靠近的警方发出的。
+Stephen Lough表示，我们不是日常食物银行，我们是紧急食物银行，我们还没有能力完全解决这种平衡，因此金钱和食品捐赠对食物银行运营非常重要。尽管很多人支持食物银行，但仍然赶不上不断增长的需求。
 
-“警方在靠近并走进工作室门口的时候喊道，‘警察，搜查令，’ 以及 ‘把你的双手举起来。’ 这名在场的客人发现是警察，举起了双手，” SIU说道。
-
-警方拔出枪并把注意力放在Kotanko身上，那时Kotanko正坐在工作椅上。SIU还表示，Kotanko当时没有举起双手。
-
-“警方进入后没多久，他转向右边拿起客人的手枪，并在警方朝他喊道‘放下枪’的时候转向警方的方向，” SIU表示。
-
-接着其中一名警官朝Kotanko开了四枪，击中了他，Kotanko从椅子上跌落。另外两名警官走进工作室，对Kotanko采取了急救。救护车随后来到现场，把他送往医院，但他伤重不治，SIU说道。
-
-SIU还表示，Kotanko中枪的部位包括头部、躯干和手部**。**
-
-开枪的警官未接受SIU的访谈，且没有授权公布他的记录，SIU称，警官有合法权力可以这样做。Kotanko的妻子也拒绝参与这次调查。
-
-Martino表示，“警方进入工作室后，要求Kotanko和客人举起双手。警方正在调查严重的刑事犯罪案件，有理由相信工作室内可能有枪支。”
-
-“虽然SIU没有一手证据表明当时开枪的警官是怎么想的，因为他有权保持沉默。但我认为基于当时的环境，他开枪是为了保护自己，也可能是要保护同事不受到伤害。不管出于什么原因，Kotanko无视警官的指示，没有举起双手。”
-
-Martino还补充说，当时没有开枪的其他警官表示，那个时候他是担心会有生命危险的，因为Kotanko拒绝放下枪，而且他当时也打算开枪自卫。”
-
-当时警官朝Kotanko开了四枪，Martino认为，证据不足以表明这是过度使用武力。因为难以想象当时这名警官还能有什么其他办法来保护他自己。
-
-“在这种情况下，这名警官只有几秒钟时间来做这个生死攸关的决定。”
-
-Martino也指出，Kotanko的枪虽然当时无法开枪，但是警方在那种情况下并不知情。“这支枪看起来是可以操作的。”
-
-在家属发出的声明中，Kotanko的家人表示对不提起控罪的结果表示失望。
-
-“家人们对这个结果表示震惊和难过，” 代表家属的律师Michael Smitiuch表示。
-
-“Kotanko一家人需要时间来审视和消化这份调查报告，并试图理解为什么民众的生命会受到威胁，且Kotanko被枪杀后，没有一个警官需要为此负责。”
-
-他们还表示要在下周召开记者会回应SIU这份报告。
-
-来源：https://www.cp24.com/news/toronto-cop-who-fatally-shot-ontario-gunsmith-cleared-by-siu-after-investigation-1.5804563
+来源：https://www.yorkregion.com/news-story/10577874-hunger-lives-here-if-i-don-t-come-here-for-sure-we-are-not-going-to-eat-/
 
 **免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
 ![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
