--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,28 +1,32 @@
 ---
-title: GTA 司机的油价再创历史新高，预计未来几周不会有任何缓解
+title: 特鲁多宣布与密西沙加交通联合投资 6.75 亿美元，并承诺三个新项目
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107386/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2107400/)
 
-作者：Michael Talbot
+作者：Abby Neufeld
 翻译：KK
-![](https://assets.gnews.org/wp-content/uploads/2022/03/5_09291K43.jpg)
-大多伦多地区的司机周五会在加油站发现另一个令人瞠目结舌的数字——每升汽油1.749 元，更可怕的是已经屡创新高的油价没有停止的势头，而且未来几周都不会缓解。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/70_13201X03.jpg)
+总理贾斯汀·杜鲁多周五下午宣布了一项超过6.75亿加元的联合投资，以支持密西沙加市三个新的交通项目。
 
-乌克兰的战争继续将汽油价格推至历史高位，那些盼着油价降低的司机可能要失望了。
+杜鲁多和安大略省交通部（GTA）副部长Stan Cho，以及密西沙加市市长Bonnie Crombie一起出席了会议。
 
-周五午夜时分，加油站油价又上涨了8分，至每升1.749元，三天内上涨了16分，这已经是一个纪录了。专家表示，未来几天价格会达到1.90元，而且不会有任何缓解。
+这三个新项目包括：358辆混合动力巴士，将取代现有的柴油车；沿Dundas街从Confederation Parkway到Etobicoke Creek的新快速交通巴士；以及对密西沙加现有的巴士线路进行升级，在十字路口设立优先车道。
 
-俄罗斯入侵乌克兰引发的供应问题、转向夏季油价以及即将于4月1日上调的联邦碳税诸多因素都导致汽油价格上涨。
+根据周五发布的消息，沿Dundas街增设的公交路线将为通勤者每次出行节省6至17分钟。
 
-汽油价格的迅速上涨促使安省新民主党周三提交了一项旨在规范安省汽油价格的法案。
+联合投资分为联邦政府的2.71亿元，安大略省政府的2.25亿元和密西沙加市的1.8亿元。
 
-新民主党在一份新闻稿中表示，《石油产品定价公平法》将要求安大略能源委员会规范安省石油产品的零售价格和批发加价。
+杜鲁多说：”我们知道交通对生活在GTA的人们是多么重要，这关系到生活质量，关系到减少在路上堵车的时间，关系到有更多时间，让你跟家人做喜欢的事情。
 
-新民主党领袖Andrea Horwath说，在住房、托儿、食品杂货和其他一切成本快速上涨之际，创纪录的高油价正在大幅削减安省家庭的预算。
+“今天的投资将使密西沙加成为一个更适合生活和工作的地方。”
 
-将汽油价格每升降低10分是福特2018选举时一个关键的承诺，看样子福特现在无法兑现了。
+Crombie说，这些投资将大大加强密西沙加的大多伦多的交通系统。
 
-来源：https://toronto.citynews.ca/2022/03/04/toronto-gas-prices-record/
+她说：”特别是投资沿Dundas街建设快速公交系统，将使居民更容易往返于密西沙加，对区域经济增长和复苏至关重要。”
+
+“Dundas快速公交将进一步加强我们从东到西的连接，减少路上交通时间，将人们与更多的工作机会和企业与更多的客户连接起来。”
+
+来源：https://toronto.ctvnews.ca/pm-justin-trudeau-announces-675m-joint-investment-for-mississauga-transit-three-new-projects-promised-1.5805834
 
 **免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
 ![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
